handled dateString null condition

--- a/Spring/DemoSpringProject/src/main/resources/static/index.html
+++ b/Spring/DemoSpringProject/src/main/resources/static/index.html
@@ -11,6 +11,8 @@
 <br>
 <a href="/rooms">Rooms</a>
 <br>
+<a href="/reservations">reservations</a>
+<br>
 <a href="/roomReservations">Go to reservations</a>
 </body>
 </html>
