modified html files

--- a/Spring/DemoSpringProject/src/main/resources/static/index.html
+++ b/Spring/DemoSpringProject/src/main/resources/static/index.html
@@ -3,16 +3,19 @@
     <title>Room Booking Application</title>
 </head>
 <body>
-<h1>Home</h1>
-<p>Enter localhost:8080/rooms in address bar to see rooms</p>
-<p>Enter localhost:8080/guests in address bar to see guests</p>
-<br>
+<nav>
+    <a href="index.html">Home</a>
+</nav>
+
+<h1>Welcome!</h1>
+
 <a href="/guests">Guests</a>
 <br>
 <a href="/rooms">Rooms</a>
 <br>
 <a href="/reservations">reservations</a>
 <br>
-<a href="/roomReservations">Go to reservations</a>
+<a href="/roomReservations">Reservations by date</a>
+
 </body>
 </html>
