added guestList service

--- a/Spring/DemoSpringProject/src/main/resources/static/index.html
+++ b/Spring/DemoSpringProject/src/main/resources/static/index.html
@@ -16,6 +16,8 @@
 <a href="/reservations">reservations</a>
 <br>
 <a href="/roomReservations">Reservations by date</a>
+<br>
+<a href="/guestList">Guests list sorted</a>
 
 </body>
 </html>
